--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
         <strong>Webchips</strong> is a free collection for using in applications for digital display.<br />
         All colors are gathered by Mungyu Kim.<br />
         You can freely use this color-chips and if you satisfied please share this collection.<br />
-        <span style="color: #bfbfbf">This service is in progress. :-)</span>
+        <span style="color: #b3b3b3;">
+          This service is in progress. :-)<br />
+          If you have a question or a suggestion, don't hesitate to <a href="mailto:kimmungyu@gmail.com">contact to me</a>.
+        </span>
       </p>
       <ul class="share">
         <li><a href="https://dribbble.com/mungyukim"><img src="./images/icon-dribbble.svg" width="24" height="24"></a></li>
