--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
     <link rel="stylesheet" href="css/wantone.css">
 
     <!-- Bootstrap Core JavaScript -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-130770440-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-130770440-1');
+    </script>
     <script src="js/bootstrap.min.js"></script>
 
   </head>
