--- a/embold.com/resources-media.html
+++ b/embold.com/resources-media.html
@@ -25,7 +25,7 @@
             <span class="product">Product</span> <i class="fas fa-angle-down"></i>
           </div>
           <div class="nav-item-main">
-            <span class="user-stories">User Stories</span> <i class="fas fa-angle-down"></i>
+            <span class="user-stories">Solutions</span> <i class="fas fa-angle-down"></i>
           </div>
           <div class="nav-item-main">
             <span class="resources active">Resources</span> <i class="fas fa-angle-down"></i>
@@ -162,7 +162,7 @@
           <a href="product-partnership.html" class="nav-menu-link">Partnership</a>
         </div>
         <div class="col-2">
-          <h4 class="footer-header-links">User Stories</h4>
+          <h4 class="footer-header-links">Solutions</h4>
           <a href="user-stories-user-roles.html" class="nav-menu-link">By User Role</a>
           <a href="user-stories-team-size.html" class="nav-menu-link">By Team Size</a>
           <a href="user-stories-industry.html" class="nav-menu-link">By Industry</a>
