--- a/embold.com/user-stories-user-roles.html
+++ b/embold.com/user-stories-user-roles.html
@@ -25,7 +25,7 @@
             <span class="product">Product</span> <i class="fas fa-angle-down"></i>
           </div>
           <div class="nav-item-main">
-            <span class="user-stories active">User Stories</span> <i class="fas fa-angle-down"></i>
+            <span class="user-stories active">Solutions</span> <i class="fas fa-angle-down"></i>
           </div>
           <div class="nav-item-main">
             <span class="resources">Resources</span> <i class="fas fa-angle-down"></i>
@@ -125,7 +125,7 @@
           <div class="block-sub-menu">
             <ul class="sub-menu">
               <li>OVERALL</li>
-              <li>ACTUAL STORIES</li>
+              <li>CUSTOMER STORIES</li>
               <li>USE CASES</li>
               <li>CONTACT SALES</li>
             </ul>
@@ -252,7 +252,7 @@
           <a href="product-partnership.html" class="nav-menu-link">Partnership</a>
         </div>
         <div class="col-2">
-          <h4 class="footer-header-links">User Stories</h4>
+          <h4 class="footer-header-links">Solutions</h4>
           <a href="user-stories-user-roles.html" class="nav-menu-link">By User Role</a>
           <a href="user-stories-team-size.html" class="nav-menu-link">By Team Size</a>
           <a href="user-stories-industry.html" class="nav-menu-link">By Industry</a>
