--- a/embold.com/index.html
+++ b/embold.com/index.html
@@ -216,7 +216,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <h4>User stories</h4>
+          <h4>Solutions</h4>
           <h2>Listen Success Stories</h2>
           <p class="block-description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
         </div>
@@ -320,7 +320,7 @@
           <a href="#" class="nav-menu-link">Partnership</a>
         </div>
         <div class="col-2">
-          <h4 class="footer-header-links">User Stories</h4>
+          <h4 class="footer-header-links">Solutions</h4>
           <a href="#" class="nav-menu-link">By User Role</a>
           <a href="#" class="nav-menu-link">By Team Size</a>
           <a href="#" class="nav-menu-link">By Industry</a>
