--- a/embold.com/nav-resources.html
+++ b/embold.com/nav-resources.html
@@ -8,7 +8,7 @@
         <span class="product">Product</span> <i class="fas fa-angle-down"></i>
       </div>
       <div class="nav-item-main">
-        <span class="user-stories">User Stories</span> <i class="fas fa-angle-down"></i>
+        <span class="user-stories">Solutions</span> <i class="fas fa-angle-down"></i>
       </div>
       <div class="nav-item-main">
         <span class="resources active">Resources</span> <i class="fas fa-angle-down"></i>
