--- a/embold.com/nav-user-stories.html
+++ b/embold.com/nav-user-stories.html
@@ -8,7 +8,7 @@
         <span class="product">Product</span> <i class="fas fa-angle-down"></i>
       </div>
       <div class="nav-item-main">
-        <span class="user-stories active">User Stories</span> <i class="fas fa-angle-down"></i>
+        <span class="user-stories active">Solutions</span> <i class="fas fa-angle-down"></i>
       </div>
       <div class="nav-item-main">
         <span class="resources">Resources</span> <i class="fas fa-angle-down"></i>
