--- a/embold-blue.com/user-stories-user-roles-architects.html
+++ b/embold-blue.com/user-stories-user-roles-architects.html
@@ -174,13 +174,26 @@
               </h3>
               <div class="paragraph">
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum aliquet risus vitae nisl egestas luctus. Nulla tempus tortor a dui fringilla tincidunt. Cras consequat sed nulla eu eleifend. Nullam consectetur lacus dolor, et consectetur enim accumsan at. Aenean commodo molestie lectus, venenatis fermentum nisl pellentesque vel. Proin eros ipsum, feugiat vitae urna eget, pellentesque porttitor metus. Aenean eleifend sed enim ut pharetra. Nullam molestie nunc ante, eu maximus diam ultrices sit amet. Integer fermentum posuere nisi, non placerat felis condimentum fringilla. Proin tincidunt ante dolor, non lobortis nibh porttitor et. Donec fringilla rhoncus consequat. Duis maximus sodales elementum. Nulla pharetra tortor dapibus, maximus quam dignissim, molestie purus. Morbi ut auctor neque, at aliquet eros.
+                With the Embold platform, not only can customer discover critical hotspots in their software systems, it can be a platform to drive innovation and improve software quality and transparency within research and development division.<br />
+                Embold looks at the code from multiple dimensions:
                 </p>
+                  <ul>
+                    <li>
+                     Design: Design issues are patterns that seem to work but are counter-productive and far from optimal in practice. Design issues can easily result in un-maintainable and error-prone solutions. Embold identifies multiple class and method level anti-patterns in the code which takes dependencies, inheritance hierarchy and important software metrics into consideration. Few Examples: God class, Brain methods, Local breakable, Local butterfly, Shotgun surgery.
+                    </li>
+                    <li>
+                      Metrics: Metrics are a way to control quality. A Software Metric is a measure of some property of a piece of software or its specifications. It compresses system traits into numbers
+                    </li>
+                    <li>
+                      Duplication: Duplicate Code or a Clone is a piece of software code that occurs more than once, either within a same component (which could be a single class, source code file, a module) or across multiple components of an application or even across multiple applications owned or maintained by the same entity. Code Duplication refers to not just exact matching between two identical pieces of code, but also to the matching functionality, which can be possibly extracted out into a separate component.
+                    </li>
+                    <li>
+                      Code Issues: Code issues are programming flaws like inefficient coding practices, sub-optimal resource utilization, improper exception handling, etc. These flaws affect KPIs like robustness, accuracy, efficiency, maintainability, reliability, understandability etc.
+                    </li>
+                  </ul>
                 <p>
-                  Aenean nec quam eget felis varius dictum vel quis nibh. Vestibulum accumsan urna ac dui sagittis tempus. Nulla interdum malesuada odio facilisis volutpat. Mauris pellentesque et felis nec ornare. Suspendisse libero ante, vestibulum in ligula id, rhoncus consectetur neque. Suspendisse in erat ac ligula pretium facilisis ac nec ante. Suspendisse egestas iaculis justo, in hendrerit metus placerat in. Vestibulum ac ultricies mauris, eu viverra odio. Phasellus sit amet aliquet erat. Duis cursus euismod enim, id pellentesque orci porta sit amet. Fusce felis nunc, pretium sit amet elit id, porta accumsan mauris. In faucibus mauris ut egestas hendrerit. Sed ac laoreet est. Donec elit tellus, imperdiet et risus hendrerit, rhoncus laoreet nisi. Mauris tincidunt diam quis orci gravida, ut eleifend mauris fermentum. Nunc finibus vehicula justo, elementum iaculis libero laoreet ac.
-                </p>
-                <p>
-                  Nullam eu bibendum ante. Pellentesque eget scelerisque sem. Nam sollicitudin felis nunc, sed vehicula ex sollicitudin id. Nulla arcu nulla, condimentum sit amet lacus in, accumsan dictum turpis. Nulla at tincidunt arcu. Proin ac magna libero. In lacus elit, facilisis vitae odio a, auctor iaculis sem. In iaculis ex diam, eget pharetra augue blandit eu.
+                Embold uses a proprietary ‘multi-vector’ diagnostic technology to combine those different dimensions to analyse and prioritize hotspots in software components. This helps you fix the biggest issues first.<br><br>
+                After introducing Embold as core development platform, clients have observed a significant improvement in their overall software quality regarding several different metrics and KPIs. In addition, the number of raised issues by their customers have significantly decreased, leading to reduced costs and a higher customer’s satisfaction. As a side effect, after making the Embold rating a part of the developer’s regular performance evaluations, their skillset has noticeably increased leading to a higher development quality.
                 </p>
               </div>
             </div>
@@ -274,10 +287,10 @@
   <script src="js/main.js" type="text/javascript"></script>
   <script>
     $(window).on("scroll", function() {
-      if($(window).scrollTop() > 520 && $(window).scrollTop() < 3420) {
+      if($(window).scrollTop() > 520 && $(window).scrollTop() < 3568) {
         $(".block-sub-menu").addClass("block-sub-menu-fix");
         $(".block-sub-menu").removeClass("block-sub-menu-fix-bottom");
-      } else if ($(window).scrollTop() >= 3420) {
+      } else if ($(window).scrollTop() >= 3568) {
         //remove the background property so it comes transparent again (defined in your css)
         $(".block-sub-menu").addClass("block-sub-menu-fix-bottom");
         $(".block-sub-menu").removeClass("block-sub-menu-fix");
